[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kitae"
requires-python = ">=3.10"
description = "A RL library using Flax modules"
authors = [
    {name = "Raffael Bolla Di Lorenzo", email = "raffaelbdl@gmail.com"}
]
dependencies = [
    "chex",
    "distrax",
    "einops",
    "envpool",
    "flatdict",
    "flax",
    "gymnasium",
    "gymnax",
    "numpy",
    "optax",
    "orbax_checkpoint",
    "pettingzoo",
    "tensorboard",
    "tensorboardX",
    "vec_parallel_env@git+https://github.com/Raffaelbdl/vectorization_parallel_env",
    "jrd_extensions@git+https://github.com/Raffaelbdl/jrd_extensions",
    "shaberax[all] @ git+https://github.com/Raffaelbdl/shaberax",
    "distrax-tabulate@git+https://github.com/Raffaelbdl/distrax_flax",
    "save@git+https://github.com/Raffaelbdl/save",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/Raffaelbdl/kitae"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "kitae.version.__version__"}

[tool.setuptools.packages.find]
include = ["kitae*"]